--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tic-tac-toe",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AliyevaRukhana.github.io/tic-tac-toe",
+  "homepage": "https://AliyevaRukhana.github.io/tic-tac-toe/public/",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
